# phishflood

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  mkdocs.yml  pyproject.toml  urls.txt
.github/workflows/: python-app.yml
api/: settings.py  urls.py
api/api/: settings.py  urls.py
config/: general_conf.py  nginx.conf  psql_conf.py  rabbit_conf.py
credfind/: __main__.py  objects.py  utils.py
credgen/: utils.py
docker/: Dockerfile.api  Dockerfile.nginx  Dockerfile.worker  docker-compose.yml
docs/: 404.html  index.html  search.html
docs/search/: search_index.json
pages/: bbva_generic.html
phishflood/: __main__.py  rabbit.py
phishings/: admin.py  apps.py  models.py  serializers.py  views.py
phishings/migrations/: 0001_initial.py  0002_alter_phishing_id.py  0003_action_created_at_phishing_created_at.py  0004_alter_form_id_alter_input_id.py  0005_alter_action_value_alter_phishing_url.py  0006_form_page.py  0007_remove_form_page.py  0008_form_page.py
samples/: info.json
tests/: test_credfind.py  test_credgen.py
